--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,20 @@
+alembic==1.7.7
+bcrypt==3.2.0
+cffi==1.15.0
+click==8.1.2
 Flask==2.1.1
+Flask-Bcrypt==1.0.1
+Flask-SQLAlchemy==2.5.1
+itsdangerous==2.1.2
+Jinja2==3.1.1
+jsonschema==4.4.0
+Mako==1.2.0
+MarkupSafe==2.1.1
+pycparser==2.21
+PyJWT==2.3.0
+python-dateutil==2.8.2
+python-editor==1.0.4
+pytz==2022.1
+six==1.16.0
+SQLAlchemy==1.4.35
+Werkzeug==2.1.1
