--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,10 @@
 alembic==1.7.7
-bcrypt==3.2.0
-cffi==1.15.0
-click==8.1.2
+django_environ==0.8.1
 Flask==2.1.1
-Flask-Bcrypt==1.0.1
-Flask-SQLAlchemy==2.5.1
-itsdangerous==2.1.2
-Jinja2==3.1.1
-jsonschema==4.4.0
-Mako==1.2.0
-MarkupSafe==2.1.1
-pycparser==2.21
+Flask_Bcrypt==1.0.1
+Flask_Cors==3.0.10
+Flask_Migrate==2.6.0
+Flask_SQLAlchemy==2.5.1
 PyJWT==2.3.0
-python-dateutil==2.8.2
-python-editor==1.0.4
-pytz==2022.1
-six==1.16.0
 SQLAlchemy==1.4.35
 Werkzeug==2.1.1
